--- a/src/less/memos-header.less
+++ b/src/less/memos-header.less
@@ -102,6 +102,8 @@ div[data-type="memos_view"] .memos-header-container {
       > .icon-img {
         width: 18px;
         height: 18px;
+
+        filter: invert(0.8);
       }
     }
   }
@@ -133,6 +135,8 @@ div[data-type="memos_view"] .memos-header-container {
         > .icon-img {
           width: 18px;
           height: 18px;
+
+          filter: invert(0.8);
         }
       }
     }
