--- a/src/less/tag-list.less
+++ b/src/less/tag-list.less
@@ -395,7 +395,7 @@
 @media only screen and (max-width: 875px) {
   .theme-dark {
     div[data-type="memos_view"] .tags-wrapper {
-      background-color: white;
+      background-color: rgb(0, 0, 0);
   
       > .tags-container {
         height: auto;
